@@ -51,7 +51,7 @@ public class BitStringChooser<S, O> implements Chooser<S, O> {
     // count options
     List<O> options = grammar.rules().get(s);
     if (options.size() == 1) {
-      return Optional.of(options.get(0));
+      return Optional.of(options.getFirst());
     }
     int bits = (int) Math.ceil(Math.log(options.size()) / Math.log(2d));
     if (i + bits >= bitString.size()) {
