@@ -42,7 +42,7 @@ public class LazySpeciator<G, S, F> implements SpeciatedEvolver.Speciator<Indivi
     List<List<Individual<G, S, F>>> clusters = new ArrayList<>();
     for (Individual<G, S, F> individual : population.all()) {
       List<Double> distances = clusters.stream()
-          .map(c -> distance.apply(individual, c.get(0)))
+          .map(c -> distance.apply(individual, c.getFirst()))
           .toList();
       if (distances.isEmpty()) {
         List<Individual<G, S, F>> cluster = new ArrayList<>();
@@ -65,7 +65,7 @@ public class LazySpeciator<G, S, F> implements SpeciatedEvolver.Speciator<Indivi
       }
     }
     return clusters.stream()
-        .map(c -> new SpeciatedEvolver.Species<>(c, c.get(0)))
+        .map(c -> new SpeciatedEvolver.Species<>(c, c.getFirst()))
         .toList();
   }
 }
