@@ -30,7 +30,7 @@ public record TrendedNumericCell<C extends Comparable<C>>(List<C> values, String
 
   @Override
   public void draw(TuiDrawer td, int width) {
-    String s = format.formatted(values.get(values.size() - 1));
+    String s = format.formatted(values.getLast());
     td.drawString(0, 0, s);
     if (values.size() > 2) {
       int lastTrend = values.get(values().size() - 1).compareTo(values.get(values().size() - 2));
@@ -66,6 +66,6 @@ public record TrendedNumericCell<C extends Comparable<C>>(List<C> values, String
 
   @Override
   public int preferredWidth() {
-    return format.formatted(values.get(values.size() - 1)).length() + 1;
+    return format.formatted(values.getLast()).length() + 1;
   }
 }
